--- a/src/cards.css
+++ b/src/cards.css
@@ -21,7 +21,7 @@
   padding: .25em;
   margin: 0 .5em .5em 0;
   text-align: center;
-  font-size: 1.2em; /* @change: adjust this value to make bigger or smaller cards */
+  font-size: 1.2em; /* @change: adjust this value to make bigger or smaller Cards */
   font-weight: normal;
   font-family: Arial, sans-serif;
   position: relative;
@@ -324,8 +324,8 @@
 .playingCards.faceImages .card.joker {
   background-repeat: no-repeat;
   background-position: -1em 0;
-  /* @change: smaller cards: more negative distance from the left
-     bigger cards: 0 or more positive distance from the left */
+  /* @change: smaller Cards: more negative distance from the left
+     bigger Cards: 0 or more positive distance from the left */
 
   /* for a centered full background image:
   background-position: .35em 0;
@@ -423,7 +423,7 @@
   right: .3em;
 }
 
-/*____________ smaller cards for use inside text ____________*/
+/*____________ smaller Cards for use inside text ____________*/
 
 .playingCards.inText .card {
   font-size: .4em;
@@ -513,7 +513,7 @@
 .playingCards ul.hand li:nth-child(25) { left: 26.4em; }
 .playingCards ul.hand li:nth-child(26) { left: 27.5em; }
 
-/* rotate cards if rotateHand option is on */
+/* rotate Cards if rotateHand option is on */
 .playingCards.rotateHand ul.hand li:nth-child(1) {
   -moz-transform: translate(1.9em, .9em) rotate(-42deg);
   -webkit-transform: translate(1.9em, .9em) rotate(-42deg);
